...
        android:layout_height="wrap_content"
        android:text="@string/home_generate_workout_text"
        android:textSize="18sp"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/home_button_searchGyms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_search_gyms"
        android:onClick="onSearchGymsClick"/>

    <Button
...
